--- a/css/projectes.css
+++ b/css/projectes.css
@@ -67,6 +67,9 @@ nav li a {
 .article {
     margin-top: 50px;
 }
+video {
+    width: 100%;
+}
 /*--------------------seccio footer---------------------*/
 footer {
     border-top: 2px solid #f2f2f2;
